[package]
name = "rustasm6502"
version = "0.1.2"
authors = ["Jonas Schievink <jonas@schievink.net>"]
description = "A 6502 assembler in macro_rules!"
license = "Apache-2.0/MIT"
repository = "https://github.com/jonas-schievink/rustasm6502"
documentation = "http://jonas-schievink.github.io/rustasm6502/rustasm6502/"

[dependencies]
#insanity = "*"
